objects/Step_Forward_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Career_Pathway__c</fullName>
        <formula>text(SF_Activity__r.Screening_Pathway_to_assess__c)</formula>
        <label>Career Pathway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Barometer_Survey_Received__c</fullName>
        <description>This field registers the date YP responded to the Survey</description>
        <label>Date Barometer Survey Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explain_Not_Enough_Support__c</fullName>
        <inlineHelpText>If you have answered &apos;No&apos; to any of the above please explain why.</inlineHelpText>
        <label>Explain Not Enough Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Last_Month_Training__c</fullName>
        <description>Rate the last month of training on a scale from 0 (very poor) to 10 (amazing)</description>
        <label>Rate Last Month Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Last_Month_Work_Placement__c</fullName>
        <description>Rate the last month of your work placement on a scale from 0 (very poor) to 10 (amazing)</description>
        <label>Rate Last Month Work Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiving_Support_General__c</fullName>
        <inlineHelpText>Do you feel that you are receiving enough support?</inlineHelpText>
        <label>Receiving Support General</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiving_Support_Training__c</fullName>
        <inlineHelpText>Do you feel that you are receiving enough support?</inlineHelpText>
        <label>Receiving Support Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiving_Support_Work__c</fullName>
        <inlineHelpText>Do you feel that you are receiving enough support?</inlineHelpText>
        <label>Receiving Support Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Activity</label>
        <referenceTo>Step_Forward_Activity__c</referenceTo>
        <relationshipLabel>Step Forward Surveys</relationshipLabel>
        <relationshipName>Step_Forward_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Job_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Job Placement</label>
        <referenceTo>Step_Forward_Job_Placement__c</referenceTo>
        <relationshipLabel>Step Forward Surveys</relationshipLabel>
        <relationshipName>Step_Forward_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thoughts_Questions_SF_Programme__c</fullName>
        <inlineHelpText>Any other thoughts or questions about the Step Forward programme</inlineHelpText>
        <label>Thoughts Questions SF Programme</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Challenge__c</fullName>
        <inlineHelpText>How challenging are you finding training?</inlineHelpText>
        <label>Training Challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too challenging</fullName>
                </value>
                <value>
                    <fullName>Appropriately challenging</fullName>
                </value>
                <value>
                    <fullName>Not challenging enough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Improvement_Areas__c</fullName>
        <inlineHelpText>Identify any areas for improvement related to training</inlineHelpText>
        <label>Training Improvement Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Challenge__c</fullName>
        <inlineHelpText>How challenging are you finding work?</inlineHelpText>
        <label>Working Challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too challenging</fullName>
                </value>
                <value>
                    <fullName>Appropriately challenging</fullName>
                </value>
                <value>
                    <fullName>Not challenging enough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workplace_Improvement_Areas__c</fullName>
        <inlineHelpText>Identify any areas for improvement related to your workplace</inlineHelpText>
        <label>Workplace Improvement Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YP_Name__c</fullName>
        <formula>SF_Activity__r.Associate__r.FirstName &amp;&quot; &quot;&amp; SF_Activity__r.Associate__r.LastName</formula>
        <label>YP Name</label>
        <type>Text</type>
    </fields>
    <label>Step Forward Survey</label>
    <listViews>
        <fullName>All_Joel</fullName>
        <columns>SF_Activity__c</columns>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>Career_Pathway__c</columns>
        <columns>Date_Barometer_Survey_Received__c</columns>
        <columns>Rate_Last_Month_Training__c</columns>
        <columns>Rate_Last_Month_Work_Placement__c</columns>
        <columns>Receiving_Support_General__c</columns>
        <columns>Receiving_Support_Training__c</columns>
        <columns>Receiving_Support_Work__c</columns>
        <columns>SF_Job_Placement__c</columns>
        <columns>Thoughts_Questions_SF_Programme__c</columns>
        <columns>Training_Challenge__c</columns>
        <columns>Training_Improvement_Areas__c</columns>
        <columns>Workplace_Improvement_Areas__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Joel</label>
    </listViews>
    <nameField>
        <displayFormat>SFS-{000000000}</displayFormat>
        <label>SF Survey number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Forward Surveys</pluralLabel>
    <recordTypes>
        <fullName>Step_Forward_Barometer_Survey</fullName>
        <active>true</active>
        <label>Step Forward Barometer Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>